@@ -1,46 +1,60 @@
 package search;
 
+import menu.Err;
 import models.Book;
 import models.Car;
 import models.RootCrop;
 
 import java.util.ArrayList;
 import java.util.Comparator;
-import java.util.Scanner;
 
 public class BinarySearch<T> implements SearchingStrategy<T> {
     @Override
-    public int search(String searchType, String searchParam, ArrayList<T> list, String dashLine) {
+    public int search(String searchType, String searchParam, ArrayList<T> list) {
         if (list.isEmpty()) {
             return -1;
         }
-
-        T example = list.get(0);
-
+        T example = list.getFirst();
+        // Выбор метода в зависимости от класса первого объекта в листе
         if (example instanceof Car) {
-            return searchInCars(searchType, searchParam, (ArrayList<Car>) list, dashLine);
+            return searchInCars(searchType, searchParam, (ArrayList<Car>) list);
         } else if (example instanceof Book) {
-            return searchInBooks(searchType, searchParam, (ArrayList<Book>) list, dashLine);
+            return searchInBooks(searchType, searchParam, (ArrayList<Book>) list);
         } else if (example instanceof RootCrop) {
-            return searchInRootCrops(searchType, searchParam, (ArrayList<RootCrop>) list, dashLine);
+            return searchInRootCrops(searchType, searchParam, (ArrayList<RootCrop>) list);
         }
         return -1;
     }
 
-    private int searchInCars(String searchType, String searchParam, ArrayList<Car> list, String dashLine) {
+    // Поиск в машинах в зависимости от имеющегося типа параметра
+    private int searchInCars(String searchType, String searchParam, ArrayList<Car> list) {
         int index;
         Comparator<Car> carComparator;
 
         switch (searchType) {
             case "power":
+                try {
+                    Integer.parseInt(searchParam);
+                } catch (NumberFormatException e) {
+                    Err.wrongFormatNum();
+                    return -1;
+                }
+
                 carComparator = Comparator.comparingInt(Car::getPower);
                 index = indexedBinarySearch(list, new Car.Builder().power(Integer.parseInt(searchParam)).model(null).year(0).build(), carComparator);
                 return index;
-            case "models":
+            case "model":
                 carComparator = Comparator.comparing(Car::getModel);
                 index = indexedBinarySearch(list, new Car.Builder().power(0).model(searchParam).year(0).build(), carComparator);
                 return index;
             case "year":
+                try {
+                    Integer.parseInt(searchParam);
+                } catch (NumberFormatException e) {
+                    Err.wrongFormatNum();
+                    return -1;
+                }
+
                 carComparator = Comparator.comparingInt(Car::getYear);
                 index = indexedBinarySearch(list, new Car.Builder().power(0).model(null).year(Integer.parseInt(searchParam)).build(), carComparator);
                 return index;
@@ -49,7 +63,8 @@ public class BinarySearch<T> implements SearchingStrategy<T> {
         }
     }
 
-    private int searchInBooks(String searchType, String searchParam, ArrayList<Book> list, String dashLine) {
+    // Поиск в книгах в зависимости от имеющегося типа параметра
+    private int searchInBooks(String searchType, String searchParam, ArrayList<Book> list) {
         int index;
         Comparator<Book> bookComparator;
 
@@ -63,6 +78,13 @@ public class BinarySearch<T> implements SearchingStrategy<T> {
                 index = indexedBinarySearch(list, new Book.Builder().author(null).name(searchParam).pages(0).build(), bookComparator);
                 return index;
             case "pages":
+                try {
+                    Integer.parseInt(searchParam);
+                } catch (NumberFormatException e) {
+                    Err.wrongFormatNum();
+                    return -1;
+                }
+
                 bookComparator = Comparator.comparingInt(Book::getPages);
                 index = indexedBinarySearch(list, new Book.Builder().author(null).name(null).pages(Integer.parseInt(searchParam)).build(), bookComparator);
                 return index;
@@ -71,22 +93,30 @@ public class BinarySearch<T> implements SearchingStrategy<T> {
         }
     }
 
-    private int searchInRootCrops(String searchType, String searchParam, ArrayList<RootCrop> list, String dashLine) {
+    // Поиск в корнеплодах в зависимости от имеющегося типа параметра
+    private int searchInRootCrops(String searchType, String searchParam, ArrayList<RootCrop> list) {
         int index;
         Comparator<RootCrop> rootCropComparator;
 
         switch (searchType) {
             case "type":
                 rootCropComparator = Comparator.comparing(RootCrop::getType);
-                index = indexedBinarySearch(list, new RootCrop.Builder().type(searchParam).weight(null).color(null).build(), rootCropComparator);
+                index = indexedBinarySearch(list, new RootCrop.Builder().type(searchParam).weight(0.0).color(null).build(), rootCropComparator);
                 return index;
             case "weight":
+                try {
+                    Double.parseDouble(searchParam);
+                } catch (NumberFormatException e) {
+                    Err.wrongFormatNum();
+                    return -1;
+                }
+
                 rootCropComparator = Comparator.comparingDouble(RootCrop::getWeight);
                 index = indexedBinarySearch(list, new RootCrop.Builder().type(null).weight(Double.parseDouble(searchParam)).color(null).build(), rootCropComparator);
                 return index;
             case "color":
                 rootCropComparator = Comparator.comparing(RootCrop::getColor);
-                index = indexedBinarySearch(list, new RootCrop.Builder().type(null).weight(null).color(searchParam).build(), rootCropComparator);
+                index = indexedBinarySearch(list, new RootCrop.Builder().type(null).weight(0.0).color(searchParam).build(), rootCropComparator);
                 return index;
             default:
                 return -1;
@@ -95,12 +125,15 @@ public class BinarySearch<T> implements SearchingStrategy<T> {
 
     @SuppressWarnings("ReassignedVariable")
     private static <T> int indexedBinarySearch(ArrayList<? extends T> list, T key, Comparator<? super T> comparator) {
+        // Берется первый и последний индексы
         int low = 0;
         int high = list.size() - 1;
 
         while (low <= high) {
+            // Более быстрое деление на 2 (сдвиг битов вправо)
             int mid = (low + high) >>> 1;
             T midVal = list.get(mid);
+            // Сравнивается midVal (средний объект в листе) и key (переданный объект с дефолтными значениями параметров и одним искомым значением параметра) через переданный компаратор
             int cmp = comparator.compare(midVal, key);
 
             if (cmp < 0)
@@ -111,87 +144,5 @@ public class BinarySearch<T> implements SearchingStrategy<T> {
                 return mid;
         }
         return -(low + 1);
-    }
-
-    public static <T> T searchResultObject(ArrayList<T> list, String sortBy, Scanner scanner, String messageInvalidCommand, String dashLine) {
-        String searchString = scanner.next().toLowerCase();
-        String[] searchArr = searchString.split(",");
-        String searchClass = searchArr[0];
-
-        if (searchArr.length != 3) {
-            System.out.println(messageInvalidCommand);
-        } else {
-            String searchType = searchArr[1];
-            String searchParam = searchArr[2];
-            T searchResult;
-
-            String messageInvalidSearchType = messageInvalidCommand + "\n- Ты написал тип '" + searchType + "', которого нет у класса '" + searchClass + "'.";
-            String messageSortByNotEqualToSearchType = messageInvalidCommand + "\n- Ты написал параметр '" + searchType + "', хотя сейчас ты можешь искать только по параметру '" + sortBy + "'.";
-
-            boolean isCarFindable = (searchType.equals("power") && searchType.equals(sortBy) || searchType.equals("model") && searchType.equals(sortBy) || searchType.equals("year") && searchType.equals(sortBy));
-            boolean isBookFindable = (searchType.equals("author") && searchType.equals(sortBy) || searchType.equals("name") && searchType.equals(sortBy) || searchType.equals("pages") && searchType.equals(sortBy));
-            boolean isRootCropFindable = (searchType.equals("type") && searchType.equals(sortBy) || searchType.equals("weight") && searchType.equals(sortBy) || searchType.equals("color") && searchType.equals(sortBy));
-
-            switch (searchClass) {
-                case "car":
-                    if (isCarFindable) {
-                        searchResult = BinarySearch.searchResultIndex(searchType, searchParam, list, dashLine);
-                        return searchResult;
-                    } else if (!searchType.equals(sortBy)) {
-                        System.out.println(messageSortByNotEqualToSearchType);
-                    } else {
-                        System.out.println(messageInvalidSearchType);
-                    }
-                    break;
-
-                case "book":
-                    if (isBookFindable) {
-                        searchResult = BinarySearch.searchResultIndex(searchType, searchParam, list, dashLine);
-                        return searchResult;
-                    } else if (!searchType.equals(sortBy)) {
-                        System.out.println(messageSortByNotEqualToSearchType);
-                    } else {
-                        System.out.println(messageInvalidSearchType);
-                    }
-                    break;
-
-                case "rootcrop":
-                    if (isRootCropFindable) {
-                        searchResult = BinarySearch.searchResultIndex(searchType, searchParam, list, dashLine);
-                        return searchResult;
-                    } else if (!searchType.equals(sortBy)) {
-                        System.out.println(messageSortByNotEqualToSearchType);
-                    } else {
-                        System.out.println(messageInvalidSearchType);
-                    }
-                    break;
-
-                default:
-                    System.out.println(messageInvalidCommand);
-                    return null;
-            }
-        }
-
-        return null;
-    }
-
-    public static <T> T searchResultIndex(String searchType, String searchParam, ArrayList<T> list, String dashLine) {
-        SearchingContext<T> searchingContext = new SearchingContext<>(new BinarySearch<>());
-        int index = searchingContext.performSearch(searchType, searchParam, list, dashLine);
-        String messageCantFindElement = dashLine + "\nОбъекта с этими данными в массиве нет";
-        T searchResult;
-
-        if (index < 0 || index > list.size()) {
-            System.out.println(messageCantFindElement);
-            return null;
-        } else {
-            searchResult = list.get(index);
-
-            System.out.println(dashLine);
-            System.out.println("Index: " + index);
-            System.out.println(searchResult);
-
-            return searchResult;
-        }
     }
 }
